    * Fast pathed code which matches old troves with new troves for the
      case where only a single old trove and a single new trove with
      a given name exist.
    * Graph calculations for dependency ordering now only occur when the
      results are needed instead of for every pass through the dependency
      resolver.

Changes in 2.0.43:
  o Internal Changes:
    * Additional information is now included when Conary receives
      corrupt changesets, to assist in diagnosing the cause of
      the changeset corruption. (CNY-2629)

  o Bug Fixes:
    * File paths from changesets are now properly normalized, and the
      rest of the code correctly handles the single-slash prefix in
      the case of installing to the main root directory. This fix
      completes the change introduced in Conary 2.0.41 and reverted
      in Conary 2.0.42, that caused tag handlers to malfunction
      when run by Conary 2.0.41. (CNY-3142)
    * Conary now puts libtool .la files in :devellib components
      by default, rather than in :lib components, for better
      multilib development environment support. (CNY-3143)
    * An internal function, mkdirChain, used to create directories,
      could be subject to a race condition on Python 2.4. This has
      been corrected. (CNY-3145)
    * The documentation for the mode= argument to several build
      actions has been improved to make it clearer to specify an
      octal number. (CNY-3146)
    * The cvc refresh command properly handles URL strings that contain
      username and password specifications. (CNY-3108)

Changes in 2.0.42:
  o Bug Fixes:
    * A previous change that normalized paths before being passed into
     tag handlers has been reverted. (CNY-3141)

Changes in 2.0.41:
  o Bug Fixes:
    * When a derived packages was created incorrectly, Conary could
      sometimes trace back; in these cases, Conary will now print a
      more useful error message. (CNY-3125)